--- a/b/pom.xml
+++ b/b/pom.xml
@@ -2,20 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+    	<groupId>com.ericsson.mavenWS</groupId>
+    	<artifactId>hello-world</artifactId>
+    	<version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.ericsson.mavenWS</groupId>
-    <artifactId>hello-world</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <name>Maven hello world project</name>
+    <artifactId>hello-B</artifactId>
 
-    <packaging>pom</packaging>
+    <build>
+        <plugins>
+            <plugin>
+	    	<groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-    <modules>
-	<module>a</module>
-	<module>b</module>
-    </modules>
-
-    <dependencyManagement>
 	<dependencies>
             <dependency>
                 <groupId>junit</groupId>
@@ -37,7 +44,6 @@
                 <scope>provided</scope>
             </dependency>
 	</dependencies>
-     </dependencyManagement>
 
 </project>
 
