--- a/a/pom.xml
+++ b/a/pom.xml
@@ -43,6 +43,12 @@
                 <version>2.5</version>
                 <scope>provided</scope>
             </dependency>
+
+	    <dependency>
+                <groupId>com.ericsson.mavenWS</groupId>
+                <artifactId>hello-B</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
 	</dependencies>
 
 </project>
